--- a/HomeKitApp/Base.lproj/Main.storyboard
+++ b/HomeKitApp/Base.lproj/Main.storyboard
@@ -197,12 +197,75 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="ieL-QI-h0y" kind="relationship" relationship="rootViewController" id="khB-qg-oYA"/>
+                        <segue destination="Tzq-a3-l22" kind="relationship" relationship="rootViewController" id="by6-XX-08n"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s8z-dg-oKM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1087" y="142"/>
+            <point key="canvasLocation" x="-2777" y="120"/>
+        </scene>
+        <!--Home Controller-->
+        <scene sceneID="X13-z0-q8Y">
+            <objects>
+                <tableViewController id="Tzq-a3-l22" customClass="HomeController" customModule="HomeKitApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="NZt-Xd-J1K">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="homeId" id="3RV-Oa-poa">
+                                <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3RV-Oa-poa" id="9Mr-1a-B87">
+                                    <frame key="frameInset" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="Aqf-px-BVE" kind="show" identifier="showRoomsSegue" id="FRZ-mM-MJO"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Tzq-a3-l22" id="Z5h-YD-VZD"/>
+                            <outlet property="delegate" destination="Tzq-a3-l22" id="qXB-du-kJC"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="8ft-Im-PGe"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Y3k-Rx-SUe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1889" y="120"/>
+        </scene>
+        <!--Room Controller-->
+        <scene sceneID="ezf-KB-LNA">
+            <objects>
+                <tableViewController id="Aqf-px-BVE" customClass="RoomController" customModule="HomeKitApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="22s-jv-gyP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="roomId" id="Dto-aK-fFS">
+                                <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dto-aK-fFS" id="xX3-A1-13f">
+                                    <frame key="frameInset" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="ieL-QI-h0y" kind="show" identifier="showAccesorySegue" id="D6n-D8-GUr"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Aqf-px-BVE" id="iZG-OQ-jsK"/>
+                            <outlet property="delegate" destination="Aqf-px-BVE" id="pQL-2Y-ScV"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f5Z-eg-h2t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1046" y="120"/>
         </scene>
     </scenes>
 </document>
